fix: pre tag overflow

--- a/src/assets/css/suneditor-contents.css
+++ b/src/assets/css/suneditor-contents.css
@@ -63,6 +63,7 @@
     background-color: #f6f8fa;
     border: 1px solid #dce5e5;
     border-radius: 3px;
+    overflow: auto;
 }
 
 /* ol, ul */
